exports[`test Lookup can be set to be full width 1`] = `
<div
  data-radium={true}
  onClick={[Function]}
  style={
    Object {
      "background": "rgba(0,0,0,0)",
      "height": "25px",
      "position": "relative",
      "width": "100%",
    }
  }>
  <div
    data-radium={true}
    style={
      Object {
        "height": "25px",
      }
    } />
  <div
    data-radium={true}
    style={
      Object {
        "height": "25px",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }>
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(255,255,255,1)",
          "border": "1px solid #808080",
          "borderRadius": "3px",
          "boxSizing": "border-box",
          "height": "25px",
          "padding": "3px",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }>
      <div>
        <HintText
          hidden={false}
          onClick={[Function]}
          text="" />
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(0,0,0,0)",
          "border": "1px solid rgba(0,0,0,0)",
          "boxSizing": "border-box",
          "display": "inline-flex",
          "marginTop": "0px",
          "minWidth": 100,
          "padding": "3px",
          "width": 100,
          "zIndex": 11,
        }
      }>
      <input
        data-radium={true}
        onChange={[Function]}
        style={
          Object {
            "background": "rgba(0,0,0,0)",
            "border": "0px solid rgba(0,0,0,0)",
            "boxSizing": "border-box",
            "color": "#030303",
            "cursor": "initial",
            "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
            "fontSize": "14px",
            "outline": "none",
            "padding": 0,
            "position": "relative",
            "width": "100%",
          }
        }
        type="text"
        value="" />
    </div>
  </div>
  <Popover
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoCloseWhenOffScreen={true}
    onRequestClose={[Function]}
    open={true}
    targetOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }>
    <div
      style={
        Object {
          "background": "#fff",
          "border": "1px solid rgba(0,0,0,1)",
          "boxSizing": "border-box",
          "width": "100px",
        }
      }>
      <Connect(UI)
        hoverBackgroundColor="#262626"
        hoverColor="#fff"
        onSelectItem={[Function]}>
        <SubHeader>
          Header
        </SubHeader>
        <ListItem
          highlighted={false}
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}>
          Testing 1
        </ListItem>
        <ListItem
          highlighted={false}
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}>
          Testing 2
        </ListItem>
        <ListItem
          highlighted={false}
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}>
          Testing 3
        </ListItem>
      </Connect(UI)>
    </div>
  </Popover>
</div>
`;

exports[`test Lookup defaults to being closed 1`] = `
<div
  data-radium={true}
  onClick={[Function]}
  style={
    Object {
      "background": "rgba(0,0,0,0)",
      "height": "25px",
      "position": "relative",
      "width": "256px",
    }
  }>
  <div
    data-radium={true}
    style={
      Object {
        "height": "25px",
      }
    } />
  <div
    data-radium={true}
    style={
      Object {
        "height": "25px",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }>
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(255,255,255,1)",
          "border": "1px solid #808080",
          "borderRadius": "3px",
          "boxSizing": "border-box",
          "height": "25px",
          "padding": "3px",
          "position": "absolute",
          "top": 0,
          "width": "256px",
        }
      }>
      <div>
        <HintText
          hidden={false}
          onClick={[Function]}
          text="" />
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(0,0,0,0)",
          "border": "1px solid rgba(0,0,0,0)",
          "boxSizing": "border-box",
          "display": "inline-flex",
          "marginTop": "0px",
          "minWidth": 256,
          "padding": "3px",
          "width": 256,
          "zIndex": 11,
        }
      }>
      <input
        data-radium={true}
        onChange={[Function]}
        style={
          Object {
            "background": "rgba(0,0,0,0)",
            "border": "0px solid rgba(0,0,0,0)",
            "boxSizing": "border-box",
            "color": "#030303",
            "cursor": "initial",
            "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
            "fontSize": "14px",
            "outline": "none",
            "padding": 0,
            "position": "relative",
            "width": "100%",
          }
        }
        type="text"
        value="" />
    </div>
  </div>
  <Popover
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoCloseWhenOffScreen={true}
    onRequestClose={[Function]}
    open={false}
    targetOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }>
    <div
      style={
        Object {
          "background": "#fff",
          "border": "1px solid rgba(0,0,0,1)",
          "boxSizing": "border-box",
          "width": "256px",
        }
      }>
      <Connect(UI)
        hoverBackgroundColor="#262626"
        hoverColor="#fff"
        onSelectItem={[Function]} />
    </div>
  </Popover>
</div>
`;

exports[`test Lookup renders as a TextField when not open 1`] = `
<div
  data-radium={true}
  onClick={[Function]}
  style={
    Object {
      "background": "rgba(0,0,0,0)",
      "height": "25px",
      "position": "relative",
      "width": "256px",
    }
  }>
  <div
    data-radium={true}
    style={
      Object {
        "height": "25px",
      }
    } />
  <div
    data-radium={true}
    style={
      Object {
        "height": "25px",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }>
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(255,255,255,1)",
          "border": "1px solid #808080",
          "borderRadius": "3px",
          "boxSizing": "border-box",
          "height": "25px",
          "padding": "3px",
          "position": "absolute",
          "top": 0,
          "width": "256px",
        }
      }>
      <div>
        <HintText
          hidden={false}
          onClick={[Function]}
          text="hint text" />
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(0,0,0,0)",
          "border": "1px solid rgba(0,0,0,0)",
          "boxSizing": "border-box",
          "display": "inline-flex",
          "marginTop": "0px",
          "minWidth": 256,
          "padding": "3px",
          "width": 256,
          "zIndex": 11,
        }
      }>
      <input
        data-radium={true}
        onChange={[Function]}
        style={
          Object {
            "background": "rgba(0,0,0,0)",
            "border": "0px solid rgba(0,0,0,0)",
            "boxSizing": "border-box",
            "color": "#030303",
            "cursor": "initial",
            "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
            "fontSize": "14px",
            "outline": "none",
            "padding": 0,
            "position": "relative",
            "width": "100%",
          }
        }
        type="text"
        value="" />
    </div>
  </div>
  <Popover
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoCloseWhenOffScreen={true}
    onRequestClose={[Function]}
    open={false}
    targetOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }>
    <div
      style={
        Object {
          "background": "#fff",
          "border": "1px solid rgba(0,0,0,1)",
          "boxSizing": "border-box",
          "width": "256px",
        }
      }>
      <Connect(UI)
        hoverBackgroundColor="#262626"
        hoverColor="#fff"
        onSelectItem={[Function]} />
    </div>
  </Popover>
</div>
`;

exports[`test Lookup renders the explicitly set selected item as a Chip 1`] = `
<div
  data-radium={true}
  onClick={[Function]}
  style={
    Object {
      "background": "rgba(0,0,0,0)",
      "height": "25px",
      "position": "relative",
      "width": "256px",
    }
  }>
  <div
    data-radium={true}
    style={
      Object {
        "height": "25px",
      }
    } />
  <div
    data-radium={true}
    style={
      Object {
        "background": "rgba(0,0,0,0)",
        "display": "flex",
        "height": "25px",
        "position": "absolute",
        "top": 0,
        "width": 256,
        "zIndex": 12,
      }
    }>
    <Chip
      backgroundColor="#e9edf1"
      color="#474c54"
      fontSize={14}
      fullWidth={true}
      lineHeight={1}
      oid={0}
      onRequestRemove={[Function]}
      text="Testing 1"
      width={200} />
  </div>
  <div
    data-radium={true}
    style={
      Object {
        "height": "25px",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }>
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(255,255,255,1)",
          "border": "1px solid #808080",
          "borderRadius": "3px",
          "boxSizing": "border-box",
          "height": "25px",
          "padding": "3px",
          "position": "absolute",
          "top": 0,
          "width": "256px",
        }
      }>
      <div>
        <HintText
          hidden={true}
          onClick={[Function]}
          text="" />
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(0,0,0,0)",
          "border": "1px solid rgba(0,0,0,0)",
          "boxSizing": "border-box",
          "display": "inline-flex",
          "marginTop": "0px",
          "minWidth": 256,
          "padding": "3px",
          "width": 256,
          "zIndex": 11,
        }
      }>
      <input
        data-radium={true}
        onChange={[Function]}
        style={
          Object {
            "background": "rgba(0,0,0,0)",
            "border": "0px solid rgba(0,0,0,0)",
            "boxSizing": "border-box",
            "color": "#030303",
            "cursor": "initial",
            "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
            "fontSize": "14px",
            "outline": "none",
            "padding": 0,
            "position": "relative",
            "width": "100%",
          }
        }
        type="text"
        value="" />
    </div>
  </div>
  <Popover
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoCloseWhenOffScreen={true}
    onRequestClose={[Function]}
    open={true}
    targetOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }>
    <div
      style={
        Object {
          "background": "#fff",
          "border": "1px solid rgba(0,0,0,1)",
          "boxSizing": "border-box",
          "width": "256px",
        }
      }>
      <Connect(UI)
        hoverBackgroundColor="#262626"
        hoverColor="#fff"
        onSelectItem={[Function]} />
    </div>
  </Popover>
</div>
`;

exports[`test Lookup renders the explicitly set selected item as a Chip 2`] = `
<div
  data-radium={true}
  onClick={[Function]}
  style={
    Object {
      "background": "rgba(0,0,0,0)",
      "height": "25px",
      "position": "relative",
      "width": "256px",
    }
  }>
  <div
    data-radium={true}
    style={
      Object {
        "height": "25px",
      }
    } />
  <div
    data-radium={true}
    style={
      Object {
        "background": "rgba(0,0,0,0)",
        "display": "flex",
        "height": "25px",
        "position": "absolute",
        "top": 0,
        "width": 256,
        "zIndex": 12,
      }
    }>
    <Chip
      backgroundColor="#e9edf1"
      color="#474c54"
      fontSize={14}
      fullWidth={true}
      lineHeight={1}
      oid="oid:1"
      onRequestRemove={[Function]}
      text="Testing 1"
      width={200} />
  </div>
  <div
    data-radium={true}
    style={
      Object {
        "height": "25px",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }>
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(255,255,255,1)",
          "border": "1px solid #808080",
          "borderRadius": "3px",
          "boxSizing": "border-box",
          "height": "25px",
          "padding": "3px",
          "position": "absolute",
          "top": 0,
          "width": "256px",
        }
      }>
      <div>
        <HintText
          hidden={true}
          onClick={[Function]}
          text="" />
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(0,0,0,0)",
          "border": "1px solid rgba(0,0,0,0)",
          "boxSizing": "border-box",
          "display": "inline-flex",
          "marginTop": "0px",
          "minWidth": 256,
          "padding": "3px",
          "width": 256,
          "zIndex": 11,
        }
      }>
      <input
        data-radium={true}
        onChange={[Function]}
        style={
          Object {
            "background": "rgba(0,0,0,0)",
            "border": "0px solid rgba(0,0,0,0)",
            "boxSizing": "border-box",
            "color": "#030303",
            "cursor": "initial",
            "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
            "fontSize": "14px",
            "outline": "none",
            "padding": 0,
            "position": "relative",
            "width": "100%",
          }
        }
        type="text"
        value="" />
    </div>
  </div>
  <Popover
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoCloseWhenOffScreen={true}
    onRequestClose={[Function]}
    open={true}
    targetOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }>
    <div
      style={
        Object {
          "background": "#fff",
          "border": "1px solid rgba(0,0,0,1)",
          "boxSizing": "border-box",
          "width": "256px",
        }
      }>
      <Connect(UI)
        hoverBackgroundColor="#262626"
        hoverColor="#fff"
        onSelectItem={[Function]} />
    </div>
  </Popover>
</div>
`;
